--- a/systemapps/account/templates/profile.html
+++ b/systemapps/account/templates/profile.html
@@ -79,7 +79,7 @@
         </div>
     </section>
 
-    <!-- MODAL TO CROP THE IMAGE -->
+    <!-- MODAL TO SELECT AND CROP THE AVATAR -->
     <div class="modal fade bs-avatarupload-modal" id="modalAvatar" tabindex="-1" role="dialog"
          aria-labelledby="myLargeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
