--- a/systemapps/account/templates/profile.html
+++ b/systemapps/account/templates/profile.html
@@ -11,6 +11,13 @@
     <script src="{% static 'js/cropper/cropper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap-fileinput/bs-filestyle.js' %}"></script>
     <script src="{% static 'js/account.js' %}"></script>
+    {% if emailchangeform.errors %}
+        <script>
+            jQuery(function ($) {
+                $("#modalEditPhone").modal("show");
+            });
+        </script>
+    {% endif %}
 {% endblock %}
 
 {% block content %}
@@ -21,7 +28,7 @@
                 <div class="row clearfix">
 
                     <div class="col-md-9">
-                        <a href="#" data-toggle="modal" data-target=".bs-avatarupload-modal">
+                        <a href="#" data-toggle="modal" data-target="#modalAvatar">
                             <img src="{{ user.avatar.url }}"
                                  class="alignleft img-circle img-thumbnail notopmargin nobottommargin" alt="Avatar"
                                  style="max-width: 84px;">
@@ -56,7 +63,7 @@
                                                     {% endif %}
                                                 </h3>
                                                 <a href="#" class="button button-rounded button-reveal button-large"
-                                                   data-toggle="modal" data-target=".bs-insertphone-modal">
+                                                   data-toggle="modal" data-target="#modalEditPhone">
                                                     <i class="icon-phone"> </i><span>Изменить</span>
                                                 </a>
                                             </div>
@@ -71,8 +78,10 @@
                                                     признание вас собственником.</p>
                                             </div>
                                             <div class="col_one_third col_last">
-                                                <a href="#" class="button button-rounded button-reveal button-large"><i
-                                                        class="icon-map-marker2"></i><span>Регистрация права</span></a>
+                                                <a href="#" id="insert-request-button"
+                                                   class="button button-rounded button-reveal button-large">
+                                                    <i class="icon-map-marker2"></i>
+                                                    <span>Регистрация права</span></a>
                                             </div>
                                             {% if owner_rooms %}
                                                 <table class="table table-hover">
@@ -160,8 +169,8 @@
     </section>
 
     <!-- MODAL TO SELECT AND CROP THE AVATAR -->
-    <div class="modal fade bs-avatarupload-modal" id="modalAvatar" tabindex="-1" role="dialog"
-         aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal fade" id="modalAvatar" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+         aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-body">
                 <div class="modal-content">
@@ -202,8 +211,8 @@
     </div>
 
     <!-- MODAL TO INSERT AND CONFIRM PHONE -->
-    <div class="modal fade bs-insertphone-modal" id="modalEditPhone" tabindex="-1" role="dialog"
-         aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal fade" id="modalEditPhone" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+         aria-hidden="true">
         <div class="modal-dialog modal-sm">
             <div class="modal-body">
                 <div class="modal-content">
@@ -211,11 +220,6 @@
                         <h4 class="modal-title" id="myModalLabel">Изменить телефон</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
-                    {% if form_error %}
-                        <script>
-                            $(#modalEditPhone).modal("show");
-                        </script>
-                    {% endif %}
                     <form id="email-change-form" name="email-change-form" class="nobottommargin"
                           action="{% url 'profile' %}" method="post">
                         <div class="modal-body">
@@ -236,6 +240,7 @@
             </div>
         </div>
     </div>
+
 
 
 {% endblock %}
