Active tabs problem

--- a/systemapps/account/templates/profile.html
+++ b/systemapps/account/templates/profile.html
@@ -41,7 +41,7 @@
 
                         <div class="row clearfix">
                             <div class="col-lg-12">
-                                <div class="tabs tabs-alt tabs-tb clearfix" id="tabs">
+                                <div class="tabs tabs-alt tabs-tb clearfix" id="tabs-account" data-active="{{ activetab }}">
                                     <ul class="tab-nav clearfix">
                                         <li><a href="#tab-profile"><i class="icon-user2"></i> Данные</a></li>
                                         <li><a href="#tab-area"><i class="icon-building"></i> Помещения</a></li>
